[package]
name = "web3_closest_provider"
version = "1.0.0"
edition = "2021"
authors = ["Samuel Sramko <samuel.sramko@gmail.com>"]
repository = "https://github.com/samuelsramko/rust-web3-closest-provider"

description = "A library for dynamically selecting the fastest Web3 provider based on response time."
license = "MIT"

[dependencies]
reqwest = {version="0.11.24", features=["json"]}
serde = { version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }